Fixes carousel images on mobile devices

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -89,7 +89,7 @@ blockquote p {
   display: inline;
 }
 
-img {
+.places-img {
   width: 100%;
 }
 
